[FEATURE] Use camelCase everywhere
